fix: scrollbar remove

--- a/src/app/tailwind.css
+++ b/src/app/tailwind.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+@layer components {
+  .no-scrollbar {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+}
